<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btViewModel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_view_model" />

    <Button
        android:id="@+id/btUserViewModel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/use_view_model" />

    <Button
        android:id="@+id/btLiveData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/live_data" />

    <Button
        android:id="@+id/btDataBinding"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/databinding" />

    <Button
        android:id="@+id/btDBLABinding"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/databinding_live_data" />

</LinearLayout>